--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 * {
-    font-family: "Cera PRO Regular";
+    font-family: "Cera PRO Medium" !important;
 }
 
 .font-bolder {
@@ -11,8 +11,26 @@
 }
 
 .font-semiregular {
-    font-family: "Cera PRO Medium";
+    font-family: "Cera PRO Medium" !important;
 }
 
 
+.dropdown-enter {
+    opacity: 0;
+    transform: translateY(-10%);
+  }
+  .dropdown-enter-active {
+    opacity: 1;
+    transform: translateY(0);
+    transition: opacity 200ms, transform 200ms;
+  }
+  .dropdown-exit {
+    opacity: 1;
+    transform: translateY(0);
+  }
+  .dropdown-exit-active {
+    opacity: 0;
+    transform: translateY(-10%);
+    transition: opacity 200ms, transform 200ms;
+  }
   
