--- a/src/index.css
+++ b/src/index.css
@@ -34,3 +34,42 @@
     transition: opacity 200ms, transform 200ms;
   }
   
+  .toggle:checked + .label {
+    background-color: #2B54E7 !important;
+  }
+
+  .toggle:checked + .label .ball {
+    animation: slideOn 0.3s linear forwards;
+  }
+
+  .ball {
+    animation: slideOff 0.3s linear forwards;
+  }
+
+  @keyframes slideOn {
+    0% {
+      transform: translateX(0) scale(1);
+    }
+
+    50% {
+      transform: translateX(10px) scale(1.2);
+    }
+
+    100% {
+     transform: translateX(20px) scale(1);
+    }
+  }
+
+  @keyframes slideOff {
+    0% {
+      transform: translateX(20px) scale(1);
+    }
+
+    50% {
+      transform: translateX(10px) scale(1.2);
+    }
+
+    100% {
+     transform: translateX(0) scale(1);
+    }
+  }
